@@ -1,5 +1,10 @@
 2015-05-19  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/66045
+	* gfortran.dg/null1.f90: New test.
+
+2015-05-19  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/66044
 	* gfortran.dg/entry_21.f90: New test.
 
